--- a/classical.html
+++ b/classical.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Classical Music, Baroque, Classical, Romantic, Impressionist, Modern, Contemporary.">
+<meta name="description" content="Explore the world of classical music and discover timeless Baroque, Classical, Romantic, Impressionist, Modern, Contemporary.">
     <title>Classical Music</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
     <nav>
         <ul>
@@ -22,6 +28,7 @@
           <li><a class="li" href="county.html">Country</a></li>
         </ul>
     </nav>
+  </div>
     <main>
 <p>Classical music is a genre of music that has a rich and diverse history spanning several centuries. It is typically characterized by its use of orchestral instruments, complex harmonies, and sophisticated musical structures. Here are some of the different types of classical music:</p>
 <div class="div">
