--- a/county.html
+++ b/county.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover country.">
+    <meta name="keywords" content="country, Traditional country, Outlaw country, Bluegrass, Country Pop.">
     <title>County Music</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +28,7 @@
       <li><a class="li" href="reggae.html">Reggae</a></li>
     </ul>
     </nav>
+  </div>
     <p>Country music has evolved and diversified over time, and as such, there are several sub-genres within the genre. Here are some of the main types of country music:
     </p>
     <div class="div">
