--- a/electronick.html
+++ b/electronick.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Electronic, Trance, Techno, House, Dubstep, Drum and Bass, Ambient, IDM, Electro, Breakbeat, Synthpop.">
+    <meta name="description" content="Dance to the beat of electronic music, with its pulsating rhythms and mesmerizing melodies. From techno to house, there's something for everyone in this genre.">
+
     <title>Electronick Musick</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +29,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
     <p>Electronic music is a vast and diverse genre that encompasses a wide range of styles and sub-genres. Some of the most common types of electronic music include:</p>
     <div class="div">
         <div class="container"><p>House: A style of electronic dance music (EDM) that originated in the 1980s in Chicago. It typically features a four-on-the-floor rhythm and repetitive beats.</p>
