--- a/hip-hop.html
+++ b/hip-hop.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Hip-Hop, Gangsta Rap, Conscious Hip-Hop, Old School Hip-Hop, Trap Music, Alternative Hip-Hop, Mumble Rap, Drill Music, Jazz Rap, Afrobeat, Horrorcore.">
+    <meta name="description" content="Get into the groove of hip-hop music with its rhythmic beats, catchy hooks, and socially conscious lyrics.">
+
     <title>Hip-Hop</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +29,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
     <p>Hip-hop music has evolved into a complex and diverse genre since its inception in the 1970s. Here are some of the most common types of hip-hop music:</p>
     
     <div class="div">
