--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Types of Music</title>
+    <meta name="keywords" content="Classical Music, jazz, pop, reggae, rock, Country, electronic, folk, hip-hop, soul, music genres.">
+    <meta name="description" content="Explore the world of music, types of music, music genres, sub-genres.">
+    <meta name="author" content="Miro Zukina">
+     <title>Music Genres</title>
      <link rel="stylesheet" href="style.css">
       </head>
       <div class="logo">
@@ -28,9 +31,9 @@
        </nav>
       </div>
        <main>
-       <h2>Types Of Music</h2>
+       <h2>Music Genres</h2>
        <br>
-       <p>Welcome to our page on General Music Types! Music has been an integral part of human culture and has evolved over time.<br> From classical music to modern-day pop music, there are a variety of music types to explore. In this article, we will introduce you to some of the most popular types of music.</p>
+       <p>Welcome to our page on Music Genres! Music has been an integral part of human culture and has evolved over time. From classical music to modern-day pop music, there are a variety of music types to explore. In this article, we will introduce you to some of the most popular  music genres and sub-genres with video examples.</p>
         <br>
         <ol>
           <li><a class="a" href="classical.html">Classical Music</a></li>
@@ -54,9 +57,7 @@
          <li><a class="a" href="county.html">Country</a></li>
        </ol>
        <br>
-        <p>In conclusion, music has a wide variety of types and genres. From classical to electronic, there is something for everyone. We hope you have enjoyed reading about some of the most popular types of music and that you will explore these genres further.
-        </p>
-        <a class="mail" href="mailto:miro.zukina@cloud.com?Subject=Appintment">Technical Support</a>
+        <a class="mail" href="mailto:miro.zukina@cloud.com?Subject=Appintment">send me an email for a comment</a>
         <br>
       </main>
         <footer>
