--- a/jazz.html
+++ b/jazz.html
@@ -5,9 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Dixieland Jazz, Swing Jazz, Bebop Jazz, Cool Jazz, Free Jazz, Latin Jazz, Fusion Jazz.">
+<meta name="description" content="Experience the rhythm and soul of jazz music, from the bluesy sounds of the Delta to the bebop stylings of New York City.">
+
   <title>Jazz Music</title>
   <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -23,6 +30,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
   </nav>
+  </div>
   <p>There are several types of jazz music that have developed over the years, each with its unique style and
     characteristics. Here are some of the most popular types of jazz music:</p>
   <div class="div">
