--- a/pop.html
+++ b/pop.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pop Music</title>
+    <meta name="keywords" content="Pop, Dance-Pop, Synth-Pop, R&B, Power Pop, Indie Pop, Bubblegum Pop">
+     <meta name="description" content="From classic Pop toBubblegum Pop, Pop music has evolved over the years to become one of the most popular genres in the world.">
+
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +29,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
   <p>Pop music is a broad and diverse genre that has evolved over time, and there are several different sub-genres and styles within it. Here are some of the main types of pop music:</p> 
     <div class="div">
       <div class="container">
