--- a/reggae.html
+++ b/reggae.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover the latest reggae music, news, and events.">
+    <meta name="keywords" content="reggae, music, Jamaica, Bob Marley, Ska, Roots Reggae, Dub, Dancehall, Rocksteady, Lovers Rock, Nyabingh.">
     <title>Document</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +28,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
     <p>Reggae music can be broadly categorized into several sub-genres, each with their unique characteristics and origins. Here are some of the most notable types of reggae music:</p>
     <div class="div">
         <div class="container"><p>Roots Reggae - This is perhaps the most popular sub-genre of reggae music, characterized by its heavy emphasis on social and political messages. Roots reggae is known for its smooth, melodic rhythms and conscious lyrics that often address issues such as poverty, oppression, and inequality.</p>
