--- a/rock.html
+++ b/rock.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Rock, Classic Rock, Hard rock, Heavy Metal, Punk Rock, Grunge, Alternative rock, Progressive rock, Glam rock, Stoner rock.">
+    <meta name="description" content="From classic rock to heavy metal to punk, rock music has evolved over the years to become one of the most popular genres in the world.">
+
     <title>Rock Music</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,7 +29,7 @@
         <li><a class="li" href="county.html">Country</a></li>
       </ul>
     </nav>
-    </nav>
+  </div>
     <p>There are many different types of rock music, each with its own unique sound and characteristics. Here are some of the most popular types of rock music:</p>
     <div class="div">
        <div class="container"><p>Classic rock - This is the type of rock music that was popular in the 1960s and 1970s, with bands like The Beatles, The Rolling Stones, Led Zeppelin, and Pink Floyd. It has a blues-based sound and often features guitar solos and heavy drums.</p>
