--- a/folk.html
+++ b/folk.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore the world of folk music and discover new artists, songs, and traditions.">
+    <meta name="keywords" content="folk music, traditional music, Ballads, Protest Songs, Sea Shanties, Regional Folk Music, Folk Revival Music.">
     <title>Folk</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
 <body>
   <nav>
     <ul>
@@ -22,6 +28,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
     <p>Folk music is a genre of music that has been passed down orally through generations within a particular culture or region. It often reflects the values, customs, and history of the people who created it. Here are some types of folk music:</p>
     <div class="div">
         <div class="container"><p>Traditional Folk Music: This type of folk music refers to the songs and melodies that have been passed down through generations without any formal written record. Traditional folk music varies from country to country and region to region and reflects the culture and history of the people who created it.</p>
