--- a/soul.html
+++ b/soul.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover the Classic soul sound of soul music, with its roots in African-American culture and its influence on modern music genres.">
+    <meta name="keywords" content="soul music, Classic soul, Motown, Funk, Neo-soul, Southern soul, Blue-eyed soul.">
     <title>Soul Music</title>
     <link rel="stylesheet" href="style1.css">
 </head>
+<div class="logo">
+  <header>
+    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+  </header>
+<body>
 <body>
   <nav>
     <ul>
@@ -22,6 +29,7 @@
       <li><a class="li" href="county.html">Country</a></li>
     </ul>
     </nav>
+  </div>
     <p>Soul music is a genre of music that emerged in the United States during the 1950s and 1960s. It is characterized by its emphasis on vocals and its fusion of various musical styles, including gospel, rhythm and blues, and jazz. Over the years, soul music has evolved and diversified, giving rise to various sub-genres. Some of the types of soul music include:</p>
 
       <div class="div">
