--- a/folk.html
+++ b/folk.html
@@ -11,7 +11,7 @@
 </head>
 <div class="logo">
   <header>
-    <img src="img/ear-headphones-music-symbol_78370-864.avif">
+    <img src="img/ear-headphones-music.jpg">
   </header>
 <body>
   <nav>
