--- a/electronick.html
+++ b/electronick.html
@@ -43,10 +43,8 @@
           </iframe>
         </div>
         <div class="container"><p>Trance: A subgenre of EDM that emerged in the early 1990s. It is characterized by a tempo of 130 to 160 beats per minute, a melodic or harmonic structure, and a build-up and breakdown structure.</p>
-          <iframe width="420" height="315"
-          src="https://www.youtube.com/embed/watch?v=GDVM4b4gORA&list=RDQMIfUFkmgovA8&start_radio=1">
-          </iframe>
-        </div>
+          <a href="https://youtu.be/GDVM4b4gORA" target="_blank"><img src="img/youtube.webp"></a>
+        </div> 
         <div class="container"><p>Dubstep: A genre of electronic dance music that originated in the early 2000s in London. It is characterized by heavy bass lines, syncopated rhythms, and a strong emphasis on sub-bass frequencies.</p>
           <iframe width="420" height="315"
           src="https://www.youtube.com/embed/JQ1txLdu6qg">
