--- a/jazz.html
+++ b/jazz.html
@@ -42,8 +42,8 @@
       <p>Swing Jazz: Swing jazz   emerged in the 1920s and 30s and became the most popular form of jazz music in the United
         States. It features a strong rhythm section consisting of drums, bass, and piano, with saxophones and trumpets
         providing the melod</p>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/watch?v=QVlY8OYSMZI&list=RDQMUeTjEJEn65Y&start_radio=1"></iframe>
-      </div>
+        <a href="https://youtu.be/QVlY8OYSMZI" target="_blank"><img src="img/youtube.webp"></a>
+      </div> 
     <div class="container">
       <p>Bebop Jazz: Bebop jazz developed in the 1940s and is characterized by fast tempos, complex chord progressions,
             and virtuosic solos. It features smaller ensembles and emphasizes improvisation.</p>
